# lecture-auto

./: .gitignore  README.md  audio_test_script.py  pyproject.toml
.claude/: settings.local.json
.openclaude/: settings.local.json
agent-os/: config.yml
agent-os/product/: mission.md  roadmap.md  tech-stack.md
docs/: README.ko.md  setup.ko.md  setup.md
src/lecture_auto.egg-info/: PKG-INFO  SOURCES.txt  (+2 more)
tests/: test_audio_amplifier.py  test_capture_append.py  test_capture_append_pdf.py  test_capture_runtime_device_resolution.py  test_capture_runtime_orchestration.py  test_cli_output_formatting.py  test_cli_output_stability_real_capture.py  test_document_converter.py  test_feature_workflow_gaps.py  test_library_additional.py  test_library_cli.py  test_library_service.py  test_llm_adapters_and_config.py  test_llm_refinement_gaps.py  test_material_conversion.py  test_merge.py  test_ollama_integration.py  test_ollama_llm.py  test_ollama_note_harness.py  test_pdf_summarize_context.py  test_recording_metadata_persistence.py  test_remaining_capture_flow_gaps.py  test_session_business_rules.py  test_session_demo.sh  test_session_metadata_store.py  test_stt_adapters_cli.py  test_stt_cli_tui_config.py  test_stt_config_models.py  test_stt_gap_analysis.py  test_stt_orchestration.py  test_stt_pipeline_workflow_gaps.py  test_summary_note_generation_gap_analysis.py  test_summary_note_generation_service.py  test_transcript_metadata_persistence.py  test_transcript_refine_command.py  test_transcript_review_workflow.py  test_transcription_cli_output.py  test_tui_capture.py
(+177 files in other folders)
