[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lecture-auto"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
	"google-genai>=1.0.0",
	"typer>=0.12,<1.0",
	"deepgram-sdk>=3.0.0",
]

[project.scripts]
lecture-auto = "lecture_auto.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
