[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lecture-auto"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
	"google-genai>=1.0.0",
	"typer>=0.12,<1.0",
	"deepgram-sdk>=3.0.0",
        "faster-whisper>=1.0.0",
	"questionary>=2.0",
        "pypdf>=5.0.0",
        "torch>=2.2.0",
        "torchaudio>=2.2.0",
        "deepfilternet>=0.5.6",
        "python-pptx>=0.6.0",
        "reportlab>=4.0.0",
        "pillow>=10.0.0",
        "ollama>=0.6.0",
]

[project.scripts]
lecture_auto = "lecture_auto.cli:main"
lecture-auto = "lecture_auto.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
